@@ -3,7 +3,7 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2023-06-29T00:00:00Z",
+      "timestamp": "2023-08-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
